--- a/07-LCOM/07-LCOM.tex
+++ b/07-LCOM/07-LCOM.tex
@@ -231,7 +231,7 @@ LCOM is the number of disjoint sets formed by the intersection of the \(n\) sets
 
 \qte
   [Chris F. Kemerer]
-  {kemerer.png}
+  {../07-LCOM/kemerer}
   {Let \(P = \{ (v_i, v_j) | v_i \cap v_j = \emptyset \}\) and \(Q = \{ (v_i, v_j) | v_i \cap v_j \not= \emptyset \}\). Then, \( \texttt{LCOM} = |P| - |Q| \), but not less than zero. Thus, the LCOM is a count of the number of method pairs whose similarity is 0 minus the count of method pairs whose similarity is not zero.}
   {chidamber1994metrics}
 
