--- a/08-TCC-and-LCC/08-TCC-and-LCC.tex
+++ b/08-TCC-and-LCC/08-TCC-and-LCC.tex
@@ -71,7 +71,7 @@ Indirectly connected (\(\texttt{NIC}=2\)): \\
 \plush{}
 
 \qte
-  {paper.png}
+  {../08-TCC-and-LCC/paper}
   {If a class is designed in \ul{ad hoc manner} and unrelated components are included in the class, the class represents more than one concept and does not \ul{model an entity}. The cohesion value of such a class is likely to be less than 0.5.}
   {bieman1995cohesion}
 
