--- a/10-object-dimensions/10-object-dimensions.tex
+++ b/10-object-dimensions/10-object-dimensions.tex
@@ -236,7 +236,7 @@ class Book
 \plush{}
 
 \qte
-  {book.jpg}
+  {../10-object-dimensions/book}
   {A small number of classes may be responsible for a large number of the methods that executed in an application, and that if testing effort were concentrated on these outlier classes, a bulk of the dynamic behavior of the object oriented systems can be checked for customer acceptance.}
   {chidamber1994metrics}
 
