--- a/12-dead-code/12-dead-code.tex
+++ b/12-dead-code/12-dead-code.tex
@@ -60,7 +60,7 @@ class Book
 
 \qte
   [Mika M\"{a}ntyl\"{a}]
-  {mika-mantyla.jpg}
+  {mika-mantyla}
   {Dead code is code that has been used in the past, but is currently never executed. Dead code \ul{hinders} code \ul{comprehension} and makes the current program structure \ul{less obvious}.}
   {mantyla2003}
 
