--- a/15-code-coverage/15-code-coverage.tex
+++ b/15-code-coverage/15-code-coverage.tex
@@ -195,7 +195,7 @@ measurements of code coverage}.''\par
   {arguelles2020}
 
 \qte
-  {survey.png}
+  {../15-code-coverage/survey}
   {Many \ul{contracts} are specifying that a certain \ul{percentage} of the statements or instructions must be successfully executed before the acceptance of the software by the customer.}
   {bowen1979survey}
 
