--- a/16-mutation-coverage/16-mutation-coverage.tex
+++ b/16-mutation-coverage/16-mutation-coverage.tex
@@ -309,7 +309,7 @@ int fibonacci(int n) {
 
 \qte
   [Yue Jia]
-  {yue-jia.jpg}
+  {yue-jia}
   {One \ul{problem} that prevents mutation testing from becoming a practical testing technique is the \ul{high computational cost} of executing the enormous number of mutants against a test set.}
   {jia2010}
 
