--- a/17-function-points/17-function-points.tex
+++ b/17-function-points/17-function-points.tex
@@ -87,7 +87,7 @@
 {\scriptsize Source: \bibentry{demarco1978}\par}}
 
 \qte
-  {sloc-vs-fps.png}
+  {../17-function-points/sloc-vs-fps}
   {At least for the applications analyzed, both the development work-hours and application size in ``SLOC'' are \ul{strong functions} of ``function points'' and ``input/output data item count.'' Further, it appears that basing applications development effort estimates on the amount of function to be provided by an application rather than an estimate of ``SLOC'' may be \ul{superior}.}
   {albrecht1983software}
 
@@ -114,7 +114,7 @@
 \end{multicols}}
 
 \qte
-  {cocomo-2.jpg}
+  {../17-function-points/cocomo-2}
   {\textbf{COCOMO-II}: Success in all types of organization depends increasingly on the development of customized software solutions, yet more than half of software projects now in the works will \ul{exceed} both their \ul{schedules} and their \ul{budgets} by more than 50\%.}
   {boehm2000}
 
