--- a/18-defect-density/18-defect-density.tex
+++ b/18-defect-density/18-defect-density.tex
@@ -46,7 +46,7 @@
 \end{multicols}}
 
 \qte
-  {ieee-982.png}
+  {../18-defect-density/ieee-982}
   {A \ul{defect} is a product \ul{anomaly}. Examples include such things as 1)~omissions and imperfections found during early life cycle phases and 2)~faults contained in software sufficiently mature for test or operation.}
   {ieee982}
 
