--- a/19-comments-density/19-comments-density.tex
+++ b/19-comments-density/19-comments-density.tex
@@ -47,7 +47,7 @@
   {woodfield1981effect}
 
 \qte
-  {../05-maintainability-index/paper-1.png}
+  {../05-maintainability-index/paper-1}
   {[The degree of] \ul{intramodule commenting} is the number of lines with comments divided by the total number of lines in the module, averaged over all modules.}
   {oman1992metrics}
 
