--- a/20-commits-density/20-commits-density.tex
+++ b/20-commits-density/20-commits-density.tex
@@ -29,13 +29,13 @@
 
 \qte
   [Marc J. Rochkind]
-  {marc-rochkind.jpg}
+  {marc-rochkind}
   {Where the change was made, that is, to what source lines, and what the change actually was is recorded by the nature of the \ul{deltas} themselves. The \ul{reason} for the delta is not recorded automatically; it must be supplied by the programmer adding the delta, but it is required. The \ul{quality} of the reason (like the quality of the change itself) depends on the conscientiousness of the programmer.}
   {rochkind1975source}
 
 \qte
   [Todd Graves]
-  {todd-graves.jpg}
+  {todd-graves}
   {By studying effort at the level of \ul{individual changes}, we are able to judge the influence of factors whose \ul{contributions} are not estimable at a large project level due to aggregation.}
   {graves1998inferring}
 
@@ -48,13 +48,13 @@
 
 \qte
   [David Atkins]
-  {david-atkins.jpg}
+  {david-atkins}
   {Observation is that the change history of a software entity (i.e., the version control data about the modifications to the entity) can be used to estimate the amount of effort a developer expended on a particular modification or set of modifications.}
   {atkins1999using}
 
 \qte
   [Audris Mockus]
-  {audris-mockus.jpg}
+  {audris-mockus}
   {Our hypothesis is that a \ul{textual description} field of a change is essential to understanding why that change was performed. Also, we expect that difficulty, size, and interval would vary strongly across different types of changes.}
   {mockus2000identifying}
 
@@ -63,13 +63,13 @@
 
 \qte
   [German Daniel]
-  {german-daniel.jpg}
+  {german-daniel}
   {Developers take care to explain, in each \ul{Modification Request} (MR), the \ul{reason} for the change (CVS allows developers to add a log message to every file revision during a CVS commit). The average log for an MR is 300 characters, with a minimum length of 1 (only 8 MRs) and 18~000 for the longest log (which involved the merging of a branch to the main CVS tree).}
   {german2004using}
 
 \qte
   [Ahmed E. Hassan]
-  {ahmed-hassan.jpg}
+  {ahmed-hassan}
   {The Mining Software Repositories (\ul{MSR}) field is maturing thanks to the rich, extensive, and readily available software repositories... After four successful years as ICSE's largest workshop, MSR became a Working Conference in 2008.}
   {hassan2008road}
 
@@ -93,7 +93,7 @@
 
 \qte
   [Witold Pedrycz]
-  {witold-pedrycz.jpg}
+  {witold-pedrycz}
   {Results indicate that for the Eclipse data, \ul{process metrics} are more efficient defect predictors than code metrics... Files with high \ul{revision numbers} are by nature defect prone... Files that are part of \ul{large CVS commits} are likely to be defect free.}
   {moser2008comparative}
 
@@ -106,7 +106,7 @@
 
 \qte
   [Abdulkareem Alali]
-  {abdulkareem-alali.jpg}
+  {abdulkareem-alali}
   {One observation is that the terms that suggest \ul{bug related changes} are associated with fairly small-sized commits.}
   {alali2008s}
 
@@ -122,7 +122,7 @@
 
 \qte
   [Abram Hindle]
-  {abram-hindle.jpg}
+  {abram-hindle}
   {Large commits were more likely to \ul{perfective} than \ul{corrective}, while small changes were more often corrective rather than perfective. In a way it makes sense, correcting errors is surgical, perfecting a system is much more global in scope.}
   {hindle2008large}
 
@@ -135,67 +135,67 @@
 
 \qte
   [Oliver Arafat]
-  {../19-comments-density/oliver-arafat.jpg}
+  {oliver-arafat}
   {We suggest distinguishing commit types by their size, using the following simple heuristic: \ul{single} commits of 1 to 100 SLoC, \ul{aggregate} commits of 101 to 10000 SLoC, and repository \ul{refactorings} of more than 10000 SLoC.}
   {arafat2009commit}
 
 \qte
   [Marco D'Ambros]
-  {marco-dambros.jpg}
+  {marco-dambros}
   {Developers do not always document all the changes in the commit comment. A common cause is that writing exhaustive comments is \ul{time consuming}, and---being the last step of a coding session---the necessary \ul{time} and \ul{energy} is not always available. Moreover, for commits with many changes, the developers might \ul{not remember} all of the modifications.}
   {d2010commit}
 
 \qte
   [Raymond Buse]
-  {raymond-buse.jpg}
+  {raymond-buse}
   {We present an automatic technique for synthesizing succinct human-readable documentation for arbitrary program \ul{differences}. We compare our documentation to 250 human-written log messages from 5 popular open source projects. Employing a human study, we find that our generated documentation is \ul{suitable} for supplementing or replacing 89\% of existing log messages that directly describe a code change.}
   {buse2010automatically}
 
 \qte
   [Jon Eyolfson]
-  {jon-eyolfson.jpg}
+  {jon-eyolfson}
   {Commits submitted between midnight and 4~AM (referred to as late-night commits) are significantly buggier and commits between 7~AM and noon are less buggy, implying that developers may want to double-check their own latenight commits.}
   {eyolfson2011time}
 
 \qte
   [Robert Dyer]
-  {robert-dyer.jpg}
+  {robert-dyer}
   {First, around 14\% of all log messages were completely \ul{empty}. Second, over two thirds of the messages contained \ul{1–15 words}, which is less than the average length of a sentence in English. A \ul{normal} length sentence in English is \ul{15–20 words} (according to various results in Google) and thus we see that very few logs (10\%) contained descriptive messages.}
   {dyer2013boa}
 
 \qte
   [Luis Fernando Cort{\'e}s-Coy]
-  {luis-fernando-cortes-coy.jpg}
+  {luis-fernando-cortes-coy}
   {The results of the user study demonstrate that 84\% of the \ul{generated} commit messages do not miss essential information required to understand the changes, 25\% of them are concise, and in 39\% of the cases the generated messages are easy to read and understand.}
   {cortes2014automatically}
 
 \qte
   [Shane McIntosh]
-  {shane-mcintosh.jpg}
+  {shane-mcintosh}
   {JIT models, which aim to \ul{predict} the commits that will introduce \ul{future defects}, are typically trained using code-based metrics. We add metrics that estimate the level of detail in commit messages to JIT models with code-based metrics. We find that 43\% and 80\% of the JIT models of the studied systems are significantly improved by adding metrics that measure commit message \ul{volume} and \ul{content}, respectively.}
   {barnett2016relationship}
 
 \qte
   [Eddie Antonio Santos]
-  {eddie-antonio-santos.jpg}
+  {eddie-antonio-santos}
   {Despite some evidence to suggest that the ``unusualness'' of a commit message is positively correlated with build failure, the slope is so gradual that it is \ul{infeasible} for an average developer to \ul{judge} a commit by simply reading its log message.}
   {santos2016judging}
 
 \qte
   [Jeongju Sohn]
-  {jeongju-sohn.jpg}
+  {jeongju-sohn}
   {\ul{Age} simply measures how long a given program element has existed in the code base. We calculate the age of a given \ul{statement} as the number of consecutive versions from the faulty version backwards to the latest version containing a modication to the statement.}
   {sohn2017fluccs}
 
 \qte
   [Iftekhar Ahmed]
-  {iftekhar-ahmed.jpg}
+  {iftekhar-ahmed}
   {Commit message \ul{quality} has an impact on software \ul{defect proneness}, and the overall quality of the commit messages \ul{decreases} over time, while developers believe they are writing better commit messages.}
   {li2023commit}
 
 \qte
   [Yuxia Zhang]
-  {yuxia-zhang.jpg}
+  {yuxia-zhang}
   {Although LLMs can take larger diffs as input, their performance of generating messages leaves much to be improved. UniXcoder tends to generate short messages, while ChatGPT can generate more detailed messages, which are \ul{very different} from those written by developers.}
   {zhang2024automatic}
 
@@ -225,6 +225,5 @@
 \item ``The first line must be maximum 50 characters long, each line in the description should though wrap at the 72nd mark.''
   --- \href{https://preslav.me/2015/02/21/what-s-with-the-50-72-rule/}{here}
 \end{itemize}}\end{multicols}}
-
 
 \end{document}
