--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -29,7 +29,7 @@
 
 \qte
   [Steven Johnson]
-  {steven-johnson.jpg}
+  {steven-johnson}
   {\textbf{Lint} is a command which examines C source programs, detecting a number of \ul{bugs} and \ul{obscurities}. It enforces the type rules of C more strictly than the C compilers. It may also be used to enforce a number of \ul{portability restrictions} involved in moving programs between different machines and/or operating systems. Another option detects a number of \ul{wasteful}, or \ul{error prone}, constructions which nevertheless are, strictly speaking, legal.}
   {johnson1977lint}
 \pitch{
@@ -171,7 +171,7 @@ Line 2: Division by zero
 
 \qte
   [Brian Chess]
-  {brian-chess.jpg}
+  {brian-chess}
   {Beware of any tool that says something like, `zero defects found, your program is, rather, now secure.' The appropriate output is, `sorry, \ul{couldn’t find} any more bugs.'}
   {chess2004static}
 
@@ -193,31 +193,31 @@ int f(int x) {
 
 \qte
   [Sunghun Kim]
-  {sunghun-kim.jpg}
+  {sunghun-kim}
   {About \ul{90\%} of warnings remain in the program or are removed during non-fix changes --- likely \ul{false positive} warnings.}
   {kim2007warnings}
 
 \qte
   [Brittany Johnson]
-  {brittany-johnson.jpg}
+  {brittany-johnson}
   {Our results confirmed that \ul{false positives} and developer \ul{overload} play a part in developers' dissatisfaction with current static analysis tools.}
   {johnson2013don}
 
 \qte
   [Benjamin Livshits]
-  {benjamin-livshits.jpg}
+  {benjamin-livshits}
   {We are not aware of a single realistic whole-program analysis tool that does not \ul{purposely} make unsound choices... Soundness is \ul{not even necessary} for most modern analysis applications, however, as many clients can tolerate unsoundness.}
   {livshits2015defense}
 
 \qte
   [Steven Arzt]
-  {steven-arzt.jpg}
+  {steven-arzt}
   {In our experiments on DroidBench examples, TASMAN \ul{reduces} the number of false positives by about 80\% \ul{without pruning} any true positives.}
   {arzt2015using}
 
 \qte
   [Nachiappan Nagappan]
-  {../13-code-churn/nachiappan-nagappan.jpg}
+  {nachiappan-nagappan}
   {Our results show that the static analysis defect density is \ul{correlated} at statistically significant levels to the pre-release defect density determined by various testing activities. Further, the static analysis defect density can be used to \ul{predict} the pre-release defect density with a high degree of sensitivity.}
   {nagappan2005static}
 
@@ -275,7 +275,7 @@ int f(int x) {
 
 \qte
   [\nospell{Krist{\'\i}n Fj{\'o}la T{\'o}masd{\'o}ttir}]
-  {kristin-tomasdottir.jpg}
+  {kristin-tomasdottir}
   {Every single interview participant mentioned that one of the reasons why they use a linter is to maintain code \ul{consistency}.}
   {tomasdottir2018adoption}
 \pitch{\includegraphics[width=.95\linewidth]{rules.png}
@@ -292,7 +292,7 @@ int f(int x) {
 
 \qte
   [\nospell{Florian Oberm{\"u}ller}]
-  {florian-obermuller.jpg}
+  {florian-obermuller}
   {We introduce the concept of \ul{code perfumes} as the counterpart to \ul{code smells}, indicating the correct application of programming practices considered to be good. Using a catalogue of 25 code perfumes for, we empirically demonstrate that these represent frequent practices in, and we find that better programs indeed contain more code perfumes.}
   {obermuller2021code}
 
