--- a/06-coupling/06-coupling.tex
+++ b/06-coupling/06-coupling.tex
@@ -151,12 +151,11 @@ class EmployeeHourlyRate
     // Update the database;
     // Calculate the hourly rate;
     // Return the value.
-  }
-}
 \end{ffcode}
 }
 \par
-``Polymorphism makes sofware more fragile ... to make it more robust!''
+``Polymorphism makes sofware more fragile ... to make it robust!''\par
+\source{bugayenko2018blog0918}
 \end{multicols}
 \plush{}
 
@@ -184,7 +183,7 @@ return Foo.with(
 \end{ffcode}
 }
 \end{multicols}\par
-{\scriptsize \url{https://www.yegor256.com/2015/12/08/temporal-coupling-between-method-calls.html}\par}
+\source{bugayenko2015blog1208}
 \plush{}
 
 \pptBanner{Distance of Coupling}
@@ -204,16 +203,9 @@ int t = Integer.parseInt(parts[0]);
 \end{ffcode}
 }
 \par\columnbreak\par
-``The larger the number (or the mean of all numbers), the worse the design: in good design we are not supposed to take something out of a method and then do some complex processing. The \ul{distance metric} will tell us exactly that: how many times, and by how much, we violated the principle of loose coupling.''\par
-{\scriptsize \url{https://www.yegor256.com/2020/10/27/distance-of-coupling.html}\par}
+``The larger the number, the worse the design: in good design we are not supposed to take something out of a method and then do some complex processing. The \ul{distance metric} will tell us how many times, and by how much, we violated the principle of loose coupling.''\par
+\source{bugayenko2020blog1027}
 \end{multicols}
 \plush{}
-
-\plush{
-  \pptBanner{Read this:}\par
-  \href{https://www.yegor256.com/2020/10/27/distance-of-coupling.html}{New Metric: the Distance of Coupling} (2020)\par
-  \href{https://www.yegor256.com/2018/09/18/fear-of-coupling.html}{Fear of Decoupling} (2018)\par
-  \href{https://www.yegor256.com/2022/06/05/reflection-means-hidden-coupling.html}{Reflection Means Hidden Coupling} (2022)\par
-}
 
 \end{document}
