--- a/main.bib
+++ b/main.bib
@@ -2248,3 +2248,30 @@
   number={2},
   year={2014}
 }
+
+@misc{bugayenko2020blog1027,
+  author = {Bugayenko, Yegor},
+  title = {{New Metric: the Distance of Coupling}},
+  howpublished = {\url{https://www.yegor256.com/201027.html}},
+  year = {2020},
+  month = {oct},
+  note = {[Online; accessed 22-09-2024]}
+}
+
+@misc{bugayenko2018blog0918,
+  author = {Bugayenko, Yegor},
+  title = {{Fear of Decoupling}},
+  howpublished = {\url{https://www.yegor256.com/180918.html}},
+  year = {2018},
+  month = {sep},
+  note = {[Online; accessed 22-09-2024]}
+}
+
+@misc{bugayenko2015blog1208,
+  author = {Bugayenko, Yegor},
+  title = {{Temporal Coupling Between Method Calls}},
+  howpublished = {\url{https://www.yegor256.com/151208.html}},
+  year = {2015},
+  month = {dec},
+  note = {[Online; accessed 22-09-2024]}
+}
