--- a/main.bib
+++ b/main.bib
@@ -2275,3 +2275,12 @@
   month = {dec},
   note = {[Online; accessed 22-09-2024]}
 }
+
+@misc{bugayenko2016blog0913,
+  author = {Bugayenko, Yegor},
+  title = {{Inheritance Is a Procedural Technique for Code Reuse}},
+  howpublished = {\url{https://www.yegor256.com/160913.html}},
+  year = {2016},
+  month = {sep},
+  note = {[Online; accessed 22-09-2024]}
+}
