--- a/08-TCC-and-LCC/08-TCC-and-LCC.tex
+++ b/08-TCC-and-LCC/08-TCC-and-LCC.tex
@@ -22,6 +22,7 @@
 
 \documentclass{article}
 \usepackage{../sqm}
+\usepackage{setspace}
 \newcommand*\thetitle{TCC and LCC}
 \begin{document}
 
@@ -131,9 +132,11 @@ class Article
 \end{ffcode}
 }
 \par\columnbreak\par
+\begin{spacing}{0.9}
 ``The \ff{Article} copies method \ff{print()} and attribute body from the \ff{Manuscript}, as if it’s not a living organism, but rather a dead one from which we \ul{inherit} its parts.''\par
 ``Implementation inheritance was created as a mechanism for code reuse. It doesn't fit into OOP at all.''\par
-{\scriptsize Source: \href{https://www.yegor256.com/2016/09/13/inheritance-is-procedural.html}{Inheritance Is a Procedural Technique for Code Reuse (2016)}\par}
+\source{bugayenko2016blog0913}
+\end{spacing}
 \end{multicols}
 \plush{}
 
@@ -178,10 +181,5 @@ class Article
 \item JavaScript --- don't know
 \item C\# --- don't know
 \end{itemize}}
-
-\plush{
-  \pptBanner{Read this:}\par
-  \href{https://www.yegor256.com/2016/09/13/inheritance-is-procedural.html}{Inheritance Is a Procedural Technique for Code Reuse} (2016)
-}
 
 \end{document}
