--- a/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
+++ b/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
@@ -57,6 +57,8 @@ void main(Shape s)
 \draw (main) edge[-triangle 45] (shape);
 \draw (circle) edge[-open triangle 60] (shape);
 \end{tikzpicture}
+\par
+..
 \end{pptWide}
 \plush{}
 
@@ -133,7 +135,8 @@ class OneByteStream
 \end{ffcode}
 }
 \end{pptWide}
-{\scriptsize Source: \href{https://www.yegor256.com/2016/04/26/why-inputstream-design-is-wrong.html}{Why InputStream Design Is Wrong} (2016)\par}
+\par
+\source{bugayenko2016blog0426}
 \plush{}
 
 
@@ -153,9 +156,7 @@ class OneByteStream
 
 \plush{
   \pptBanner{Read this:}\par
-  \href{https://www.yegor256.com/2016/04/26/why-inputstream-design-is-wrong.html}{Why InputStream Design Is Wrong} (2016)\par
   \href{https://www.yegor256.com/2020/02/19/fat-skinny-design.html}{Fat vs. Skinny Design} (2020)\par
-  \href{https://www.yegor256.com/2018/09/18/fear-of-coupling.html}{Fear of Decoupling} (2018)\par
   \href{https://www.yegor256.com/2017/12/19/srp-is-hoax.html}{SRP is a Hoax} (2017) \par
 }
 
