--- a/main.bib
+++ b/main.bib
@@ -2284,3 +2284,12 @@
   month = {sep},
   note = {[Online; accessed 22-09-2024]}
 }
+
+@misc{bugayenko2016blog0426,
+  author = {Bugayenko, Yegor},
+  title = {{Why InputStream Design Is Wrong}},
+  howpublished = {\url{https://www.yegor256.com/160426.html}},
+  year = {2016},
+  month = {apr},
+  note = {[Online; accessed 22-09-2024]}
+}
