--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -40,7 +40,7 @@
   {deimel1985uses}
 
 \qte
-  {darrell-raymond}
+  {../01-lines-of-code/darrell-raymond}
   {Whatever approach is used, it is clear that a central activity in software maintenance is \ul{reading}. In maintenance, the main role of source code is not as a compilable entity, but as a human-readable statement of the intent and mechanism of the program.}
   {raymond1991reading}
 
