--- a/17-function-points/17-function-points.tex
+++ b/17-function-points/17-function-points.tex
@@ -92,7 +92,7 @@
   {albrecht1983software}
 
 \qte
-  {book-of-charles-symons}
+  {../17-function-points/book-of-charles-symons}
   {The major difference is that \textbf{Mk II FPA}, with its \ul{finer granularity}, is a continuous measure whereas IFPUG limits component size once a threshold is reached.}
   {symons1991software}
 
